# deep-time

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  clippy.toml
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: perf.rs
crates/deep-time-leap-seconds-gen/: Cargo.toml
crates/deep-time-leap-seconds-gen/src/: main.rs
crates/tz-generator/: .gitignore  Cargo.toml
crates/tz-generator/src/: main.rs
docs/: relativity.md  trajectory.md
examples/: precision_control.rs  proper_time_path.rs  readme.rs  sidereal_time.rs  test.rs
scripts/: common.sh  full-test.sh  release.sh  test-matrix.sh  validate.sh
src/: an_err.rs  ascii_str.rs  buf_str.rs  clock_drift.rs  clock_model.rs  clock_type.rs  common.rs  constants.rs  consts.rs  date_components.rs  drift.rs  dt_big.rs  error.rs  error_alloc.rs  error_std.rs  ez_error.rs  formatter.rs  historical_sofa.rs  historical_sofa_offsets.rs  historical_utc.rs  leap_seconds.rs  lib.rs  light_time.rs  lite_str.rs  macros.rs  parser.rs  position.rs  scale.rs  time_poly.rs  time_pov.rs  time_range.rs  tzdb.rs  utils.rs  wire.rs
src/alloc_parse/: alloc_constants.rs  date_classification.rs  helpers.rs  mod.rs  parse_date.rs  parse_duration.rs  std_constants.rs  types.rs
src/alloc_parse/date/: classify.rs  gen_day_first.rs  gen_month_first.rs  gen_other.rs  mod.rs  (+12 more)
src/bop/: mod.rs
src/civil_parts/: from_bin_ccsds.rs  from_str.rs  from_str_iso.rs  from_strptime.rs  mod.rs  to_bin_ccsds.rs  to_chrono.rs  to_deep_time.rs  to_jiff.rs  to_str_ccsds.rs
src/date_components/: from_ccsds_bin.rs  from_ccsds_str.rs  mod.rs  to_chrono.rs  to_deep_time.rs
src/date_parsing/: mod.rs  parser.rs  to_chrono.rs  to_jiff.rs  to_time_point.rs
src/delta/: arithmetic.rs  constructors.rs  conversions.rs  formatting.rs  from_chrono.rs  from_jiff.rs  mod.rs  ops.rs  time_units.rs  to_chrono.rs  to_jiff.rs
src/dt/: arithmetic.rs  arithmetic_calendar.rs  chrono.rs  constructors.rs  conveniences.rs  conversions.rs  conversions_lunar.rs  conversions_mars.rs  conversions_tdb.rs  decimal_year.rs  epoch.rs  et.rs  formatting.rs  from_ccsds.rs  from_chrono.rs  from_gps.rs  from_hifitime.rs  from_jiff.rs  from_str.rs  gregorian.rs  helpers.rs  hifitime.rs  icu.rs  jiff.rs  julian_date.rs  lunar.rs  mars.rs  mod.rs  numbers_traits.rs  ops.rs  tdb.rs  tdb_erfa.rs  tdb_fairhead1990.rs  tdb_hi.rs  time.rs  time_units.rs  to.rs  to_bin_ccsds.rs  to_ccsds_bin.rs  to_ccsds_str.rs  (+9 more)
src/eop/: mod.rs
src/format_parse/: formatter.rs  mod.rs  parser.rs  to_chrono.rs  to_deep_time.rs  to_jiff.rs
src/gregorian_time/: mod.rs  to_str.rs
src/locale/: lang_data.rs  lang_map.rs  mod.rs
src/math/: atan.rs  atan2.rs  cos.rs  div.rs  floor.rs  k_cos.rs  k_sin.rs  k_tan.rs  log.rs  mod.rs  powi.rs  rem_pio2.rs  rem_pio2_large.rs  round.rs  scalbn.rs  sin.rs  sqrt.rs  tan.rs  trunc.rs
src/parse/: ccsds_bin.rs  ccsds_str.rs  formatter.rs  mod.rs  parser.rs  to_chrono.rs  to_deep_time.rs  to_jiff.rs
src/parse_and_format/: ccsds_bin.rs  ccsds_str.rs  mod.rs  parser.rs  to_chrono.rs  to_deep_time.rs  to_jiff.rs
src/parse_date/: chrono.rs  for_time_point.rs  jiff.rs  mod.rs  parser.rs
src/physics/: drift.rs  light_time.rs  mod.rs  position.rs  spacetime.rs  trajectory.rs  velocity.rs
src/point/: arithmetic.rs  constructors.rs  conversions.rs  formatting.rs  mod.rs  ops.rs  point_pov.rs  traits.rs  unix.rs
src/sidereal/: mod.rs
src/std_parse/: date_classification.rs  parse_date.rs  parse_duration.rs  std_constants.rs  types.rs
src/strptime/: mod.rs  parser.rs
src/strtime/: mod.rs  parser.rs  printer.rs
src/t_span/: arithmetic.rs  constructors.rs  formatting.rs  from_chrono.rs  from_hifitime.rs  from_jiff.rs  from_str.rs  mod.rs  ops.rs  time_units.rs  to_chrono.rs  to_hifitime.rs  to_jiff.rs  to_str.rs
src/time_parts/: from_bin_ccsds.rs  from_ccsds_bin.rs  from_ccsds_str.rs  from_str.rs  from_str_ccsds.rs  from_str_iso.rs  mod.rs  to_bin_ccsds.rs  to_ccsds_bin.rs  to_ccsds_str.rs  to_chrono.rs  to_deep_time.rs  to_jiff.rs  to_str_ccsds.rs
src/time_point/: arithmetic.rs  constructors.rs  conversions.rs  conversions_tests.rs  epoch.rs  formatting.rs  from_attos_since.rs  from_canonical.rs  from_ccsds.rs  from_chrono.rs  from_gps.rs  from_hifitime.rs  from_jiff.rs  from_str.rs  gregorian.rs  gregorian_historical.rs  gregorian_point.rs  gregorian_time.rs  julian_date.rs  mod.rs  ops.rs  relativity.rs  to_attos_since.rs  to_canonical.rs  to_ccsds_bin.rs  to_ccsds_str.rs  to_chrono.rs  to_gps.rs  to_hifitime.rs  to_jiff.rs  to_str.rs  trajectory.rs  unix.rs
src/time_span/: arithmetic.rs  constructors.rs  conversions.rs  formatting.rs  from_chrono.rs  from_hifitime.rs  from_jiff.rs  from_str.rs  mod.rs  ops.rs  time_units.rs  to_chrono.rs  to_hifitime.rs  to_jiff.rs  to_str.rs
src/timestamp/: arithmetic.rs  constructors.rs  conversions.rs  formatting.rs  mod.rs  ops.rs  relativity.rs  traits.rs  unix.rs
src/tz/: jiff_tz.rs  mod.rs  tzdb.rs
src/ut1/: mod.rs
src/utc/: historical.rs  leap_seconds_fns.rs  leap_seconds_list.rs  mod.rs
src/ymdhms/: mod.rs  printer.rs  to_str.rs
tests/: astropy_conversions_tests.rs  astropy_expected_conversions_tests.rs  astropy_expected_tai_tests.rs  astropy_expected_values_tests.rs  astropy_sidereal_tests.rs  astropy_tests.rs  astropy_utc_tests.rs  ccsds_safety_tests.rs  ccsds_tests.rs  chrono_tests.rs  civil_parts_tests.rs  clock_drift_tests.rs  conversions_ltc_tests.rs  conversions_lunar_tests.rs  conversions_mars_tests.rs  conversions_tests.rs  date_relative_tests.rs  date_tests.rs  dt_tests.rs  duration_tests.rs  formatter_tests.rs  from_str_parse_tests.rs  gps_tests.rs  hifitime_tests.rs  historical_sofa_tests.rs  icu_tests.rs  jiff_tests.rs  jiff_types_tests.rs  julian_date.rs  julian_date_tests.rs  lang_de_tests.rs  lang_es_tests.rs  lang_fr_tests.rs  lang_tests.rs  leap_seconds_tests.rs  light_time_tests.rs  parser_iso_tests.rs  parser_tests.rs  perf_tests.rs  serde_tests.rs  (+16 more)
tests/assets/: leap-seconds-custom.list.txt
tests/multi_lang_tests/: lang_de_tests.rs  lang_es_tests.rs  lang_fr_tests.rs  main.rs
(+58 files in other folders)
