[workspace]

members = [".", "crates/deep-time-leap-seconds-gen"]
default-members = ["."]

[package]

name = "deep-time"
version = "0.1.0-beta.30"
authors = ["ragardner <github@ragardner.simplelogin.com>"]
description = "High-precision, no-std, no-alloc date-time library, leap-seconds, time scales, relativistic time, and a powerful date & duration parser"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ragardner/deep-time"
keywords = ["time", "date", "duration", "astronomy", "parser"]
categories = ["date-and-time", "science"]
readme = "README.md"
edition = "2024"
rust-version = "1.90"

[dependencies]

once_cell    = { version = "=1.21", optional = true, default-features = false, features = ["alloc"] }
hashbrown    = { version = "0.17", optional = true }
aho-corasick = { version = "1.1.4", optional = true, default-features = false }
jiff         = { version = "0.2.33", optional = true, default-features = false }
chrono       = { version = "0.4.45", optional = true, default-features = false }
hifitime     = { version = "4.3", optional = true, default-features = false }
time         = { version = "0.3.53", optional = true, default-features = false }
icu_calendar = { version = "2.2", optional = true, default-features = false }
icu_time     = { version = "2.2", optional = true, default-features = false }
serde        = { version = "1.0", optional = true, default-features = false, features = ["derive", "rc"] }
tsify        = { version = "=0.5.6", optional = true }
wasm-bindgen = { version = "0.2", optional = true, features = ["serde-serialize"] }
js-sys       = { version = "0.3", optional = true }
sys-locale   = { version = "=0.3.2", optional = true }
defmt        = { version = "1.1.1", optional = true }

[features]

# ──────────────────────────────────────────────────────────────
# CORE FEATURES
# ──────────────────────────────────────────────────────────────

# Crate has no default features
default = []

# Basic but energy efficient no std, no alloc panic handler
panic-handler = []

# defmt is a logging framework commonly used in embedded environments
defmt = ["dep:defmt"]

# Proper time along trajectory, Drift/Spacetime rates, Position, Velocity
physics = []

# Higher accuracy but larger binary size TDB conversion code
tdb-hi = []

# Mars conversions functions
mars = []

# Basic sidereal functionality
sidereal = []

# sidereal + ERFA Equation of the origins and Equation of the equinoxes
sidereal-earth = ["sidereal"]

# UT1 parsing and conversions
eop = ["alloc"]

# Required for some file handling such as with the "eop" feature
# and loading your own leap seconds files
std = [
    "alloc",
    "aho-corasick?/default",
    "jiff?/std",
    "chrono?/std",
    "hifitime?/std",
    "time?/std",
    "serde?/std",
]

# String conversions such as formatting to String
alloc = [
    "jiff?/alloc",
    "chrono?/alloc",
    "time?/alloc",
]

# ──────────────────────────────────────────────────────────────
# PARSER / LANGUAGES (no_std friendly)
# ──────────────────────────────────────────────────────────────

# Auto-parsers for dates and durations
parse = [
    "alloc",
    "dep:aho-corasick",
    "dep:once_cell",
    "dep:hashbrown",
]

multi-lang = []

es = ["multi-lang"]
de = ["multi-lang"]
fr = ["multi-lang"]
euro = [
    "es",
    "de",
    "fr",
]
lang = [
    "euro",
]

# ──────────────────────────────────────────────────────────────
# SERIALIZATION FEATURES
# ──────────────────────────────────────────────────────────────

# Library custom serialization for major types
wire = []

serde = [
    "dep:serde",
    "serde?/alloc",
    "jiff?/serde",
    "chrono?/serde",
    "hifitime?/serde",
    "time?/serde",
]

# ──────────────────────────────────────────────────────────────
# INTEROP AND TIMEZONE FEATURES
# ──────────────────────────────────────────────────────────────

jiff = [
    "dep:jiff",
]
jiff-tz = [
    "jiff",
    "alloc",
    "jiff?/tz-system",
    "jiff?/tzdb-concatenated",
    "jiff?/tz-fat",
    "jiff?/perf-inline",
    "jiff?/tzdb-zoneinfo",
    "jiff?/tzdb-bundle-platform",
]
jiff-tz-bundle = [
    "jiff",
    "alloc",
    "jiff?/tz-system",
    "jiff?/tzdb-concatenated",
    "jiff?/tz-fat",
    "jiff?/perf-inline",
    "jiff?/tzdb-zoneinfo",
    "jiff?/tzdb-bundle-always",
]

chrono = [
    "dep:chrono",
]

hifitime = [
    "dep:hifitime",
]

time = [
    "dep:time",
]

# ICU4X civil datetime interop
icu = [
    "dep:icu_calendar",
    "dep:icu_time",
]

# ──────────────────────────────────────────────────────────────
# WEB FEATURES
# ──────────────────────────────────────────────────────────────

js = [
    "std",
    "serde",
    "dep:wasm-bindgen",
    "dep:js-sys",
    "jiff?/js",
    "chrono?/wasmbind",
    "sys-locale?/js",
]

tsify = [
    "serde",
    "dep:tsify",
    "dep:wasm-bindgen",
    "js",
]

# ──────────────────────────────────────────────────────────────
# OTHER FEATURES
# ──────────────────────────────────────────────────────────────

locale = [
    "alloc",
    "std",
    "dep:sys-locale",
]

[lints.clippy]
# cargo clippy --workspace --all-features --all-targets -- -D warnings -W clippy::collapsible_else_if
non_canonical_partial_ord_impl = "allow"
wrong_self_convention          = "allow"
excessive_precision            = "allow"
indexing_slicing               = "allow"
too_many_arguments             = "allow"
result_unit_err                = "allow"
get_first                      = "allow"
unwrap_used                    = "deny"
expect_used                    = "deny"
panic                          = "deny"

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "readme"
required-features = ["parse", "jiff-tz", "euro"]

[[example]]
name = "sidereal_time"
required-features = ["sidereal-earth", "eop", "std"]

[[example]]
name = "proper_time_path"
required-features = ["physics"]

[[bench]]
name = "perf"
harness = false
required-features = ["parse", "jiff-tz", "hifitime"]

[dev-dependencies]
serde_json = "1.0"
# CCSDS time-code interop tests (https://crates.io/crates/spacepackets)
spacepackets = "0.18"