[package]
name = "deep-time-leap-seconds-gen"
version = "0.0.0"
edition = "2024"
publish = false
description = "Generate src/utc/leap_seconds_list.rs from an IANA leap-seconds.list file"
workspace = "../.."

[[bin]]
name = "gen-leap-seconds"
path = "src/main.rs"

[dependencies]
deep-time = { path = "../..", default-features = false, features = ["std", "alloc"] }